Code clean and fix
Change header icon wrong css tag

--- a/ECommerceCoreDapper/ECommerceCoreDapper/Views/User/Cart.cshtml
+++ b/ECommerceCoreDapper/ECommerceCoreDapper/Views/User/Cart.cshtml
@@ -49,13 +49,13 @@
 									<td class="column-4">
 										<div class="wrap-num-product flex-w m-l-auto m-r-0">
 											<div class="btn-num-product-down cl8 trans-04 flex-c-m" disabled="true">
-												<i class="fs-16 zmdi zmdi-minus" disabled="true"></i>												
+												<i class="fs-16 zmdi zmdi-minus"></i>												
 											</div>
 
 											<input class="mtext-104 cl3 txt-center num-product" id="qty" type="number" max="5" min="1" name="num-product1" value="@item.Quantity" readonly>
 
 											<div class="btn-num-product-up cl8 trans-04 flex-c-m" disabled="true">
-												<i class="fs-16 zmdi zmdi-plus" disabled="true"></i>
+												<i class="fs-16 zmdi zmdi-plus"></i>
 											</div>
 										</div>
 									</td>
@@ -105,6 +105,8 @@
 				ViewBag.totalQuantity = totalQuantity;
 				ViewBag.totalPrice = totalPrice;
 				ViewBag.alltotal = alltotal;
+
+
 
 			}
 			
@@ -178,3 +180,6 @@
 		</div>
 	@*</form>*@
 	}
+	
+
+	
