--- a/ECommerceCoreDapper/ECommerceCoreDapper/Views/Partial/_header.cshtml
+++ b/ECommerceCoreDapper/ECommerceCoreDapper/Views/Partial/_header.cshtml
@@ -62,20 +62,20 @@
 						}
 						ViewBag.totalQty = c;
 
-											<div class="flex-c-m h-full p-l-18 p-r-25 bor5">
-												<div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti @*js-show-cart*@" data-notify="@ViewBag.totalQty">
-													<a href="@Url.Action("Cart","User")"><i class="zmdi zmdi-shopping-cart"></i></a>
-												</div>
-											</div>
+													<div class="flex-c-m h-full p-l-18 p-r-25 bor5">
+														<div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti @*js-show-cart*@" data-notify="@ViewBag.totalQty">
+															<a href="@Url.Action("Cart","User")"><i class="zmdi zmdi-shopping-cart"></i></a>
+														</div>
+													</div>
 
 						}
 						
 						else
 						{
 						ViewBag.totalQty = 0;
-									<div title="Cart is Empty" class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti" disabled data-notify="@ViewBag.totalQty">
-										<i class="zmdi zmdi-shopping-cart"></i>
-									</div>
+											<div title="Cart is Empty" class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti" disabled data-notify="@ViewBag.totalQty">
+												<i class="zmdi zmdi-shopping-cart"></i>
+											</div>
 						}
 						
 							
@@ -105,27 +105,27 @@
 				<div class="flex-c-m h-full p-r-10">					
 					<div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 js-show-modal-search">
 						<a href="@Url.Action("Login","User")" id="myaccount2"><i class="zmdi zmdi-directions-bike animated infinite fadeInLeft zmdi-hc-fw"></i>
-						<br /><span id="giris2" style="font-size:12px;font-weight:bold;text-decoration:underline;aling-center:">@ViewBag.login</span></a>
+						<br /><span id="giris2" style="font-size:12px;font-weight:bold;text-decoration:underline;align-items:center;">@ViewBag.login</span></a>
 
 					</div>
 				@{
 					
 						if(!String.IsNullOrEmpty(cookie))
 						{
-									<div class="flex-c-m h-full p-l-18 p-r-25 bor5">
-										<div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="@ViewBag.totalQty">
-										<a href="@Url.Action("Cart","User")"><i class="zmdi zmdi-shopping-cart"></i></a>
-										</div>
-									</div>
+											<div class="flex-c-m h-full p-l-18 p-r-25 bor5">
+												<div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="@ViewBag.totalQty">
+												<a href="@Url.Action("Cart","User")"><i class="zmdi zmdi-shopping-cart"></i></a>
+												</div>
+											</div>
 
 						}
 						
 						else
 						{
 						ViewBag.totalQty = 0;
-									<div title="Cart is Empty" class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti" disabled data-notify="@ViewBag.totalQty">
-										<i class="zmdi zmdi-shopping-cart"></i>
-									</div>
+											<div title="Cart is Empty" class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti" disabled data-notify="@ViewBag.totalQty">
+												<i class="zmdi zmdi-shopping-cart"></i>
+											</div>
 						}
 						
 							
